RESOLVED FIXED47805
[GTK] Tests LayoutTests/fast/encoding/utf-32* fail when using glib unicode
https://bugs.webkit.org/show_bug.cgi?id=47805
Summary [GTK] Tests LayoutTests/fast/encoding/utf-32* fail when using glib unicode
Carlos Garcia Campos
Reported 2010-10-18 02:38:46 PDT
When webkit is built with glib unicode instead of icu tests utf-32-big-endian-bom, utf-32-big-endian-nobom, utf-32-little-endian-bom and utf-32-little-endian-nobom under LayoutTests/fast/encoding fail because TextCodecGtk doesn't register UTF-32 encoding names.
Attachments
Patch (2.53 KB, patch)
2010-10-18 02:46 PDT, Carlos Garcia Campos
mrobinson: review-
Updated patch for current git master (1.81 KB, patch)
2010-10-21 01:59 PDT, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2010-10-18 02:46:22 PDT
WebKit Review Bot
Comment 2 2010-10-18 02:49:36 PDT
Attachment 71011 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/platform/text/gtk/TextCodecGtk.h:72: m_codecAliases_UTF_32 is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/text/gtk/TextCodecGtk.h:73: m_codecAliases_UTF_32BE is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/text/gtk/TextCodecGtk.h:74: m_codecAliases_UTF_32LE is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/text/gtk/TextCodecGtk.cpp:59: TextCodecGtk::m_codecAliases_UTF_8 is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/text/gtk/TextCodecGtk.cpp:60: TextCodecGtk::m_codecAliases_UTF_32 is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/text/gtk/TextCodecGtk.cpp:61: TextCodecGtk::m_codecAliases_UTF_32BE is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/text/gtk/TextCodecGtk.cpp:62: TextCodecGtk::m_codecAliases_UTF_32LE is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 7 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Martin Robinson
Comment 3 2010-10-18 14:14:59 PDT
Comment on attachment 71011 [details] Patch Looks good, but please fix all the variable names (e.g. m_codecAliases_UTF_8 --> m_codecAliasesUTF8). Thanks.
Carlos Garcia Campos
Comment 4 2010-10-21 01:59:55 PDT
Created attachment 71407 [details] Updated patch for current git master
Martin Robinson
Comment 5 2010-10-21 02:01:29 PDT
Comment on attachment 71407 [details] Updated patch for current git master Much nicer!
WebKit Commit Bot
Comment 6 2010-10-21 04:26:11 PDT
Comment on attachment 71407 [details] Updated patch for current git master Clearing flags on attachment: 71407 Committed r70227: <http://trac.webkit.org/changeset/70227>
WebKit Commit Bot
Comment 7 2010-10-21 04:26:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.