2010-10-21  Carlos Garcia Campos  <cgarcia@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Tests LayoutTests/fast/encoding/utf-32* fail when using glib unicode
        https://bugs.webkit.org/show_bug.cgi?id=47805

        Register UTF-32 encodings in TextCodecGtk.

        * platform/text/gtk/TextCodecGtk.cpp:
        (WebCore::TextCodecGtk::registerBaseEncodingNames):
        (WebCore::TextCodecGtk::registerBaseCodecs):

git-svn-id: svn://svn.chromium.org/blink/trunk@70227 bbb929c8-8fbe-4397-9dbb-9b2b20218538