third_party/WebKit/WebCore/platform/text/gtk/TextCodecGtk.cpp
@@ -106,6 +106,9 @@ void TextCodecGtk::registerBaseEncodingNames(EncodingNameRegistrar registrar)
 {
     // Unicode
     registerEncodingNameIfAvailable(registrar, "UTF-8");
+    registerEncodingNameIfAvailable(registrar, "UTF-32");
+    registerEncodingNameIfAvailable(registrar, "UTF-32BE");
+    registerEncodingNameIfAvailable(registrar, "UTF-32LE");
 
     // Western
     if (registerEncodingNameIfAvailable(registrar, "ISO-8859-1")) {
@@ -125,6 +128,9 @@ void TextCodecGtk::registerBaseCodecs(TextCodecRegistrar registrar)
 {
     // Unicode
     registerCodecIfAvailable(registrar, "UTF-8");
+    registerCodecIfAvailable(registrar, "UTF-32");
+    registerCodecIfAvailable(registrar, "UTF-32BE");
+    registerCodecIfAvailable(registrar, "UTF-32LE");
 
     // Western
     registerCodecIfAvailable(registrar, "ISO-8859-1");
